--- a/conf.conf
+++ b/conf.conf
@@ -1,3 +1,4 @@
 gnomeExtensions_Id=(19 1287 36 615 770 906 750 826)
 gnomeExtensions_Name=("User Themes" "Unite" "Lock Keys" "KStatusNotifierItem/AppIndicator Support" "Force Quit" "Sound Input & Output Device Chooser" "OpenWeather" "Suspend Button")
 teamViewerDownloadLastUrl="https://dl.teamviewer.com/download/linux/version_15x/teamviewer_15.0.8397_amd64.deb"
+googleChromeDownloadLastUrl="https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
