correções - comentários futuros

--- a/conf.conf
+++ b/conf.conf
@@ -3,3 +3,21 @@ gnomeExtensions_Name=("User Themes" "Unite" "Lock Keys" "KStatusNotifierItem/App
 homeFilesDirectoriesVariables=(XDG_DESKTOP_DIR XDG_DOWNLOAD_DIR XDG_TEMPLATES_DIR XDG_PUBLICSHARE_DIR XDG_DOCUMENTS_DIR XDG_MUSIC_DIR XDG_PICTURES_DIR XDG_VIDEOS_DIR)
 teamViewerDownloadLastUrl="https://dl.teamviewer.com/download/linux/version_15x/teamviewer_15.0.8397_amd64.deb"
 googleChromeDownloadLastUrl="https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
+
+#1324 App Switcher Actions https://extensions.gnome.org/extension/1324/app-switcher-actions/
+#1217 Appfolders Management extension https://extensions.gnome.org/extension/1217/appfolders-manager/
+#1251 Blyr https://extensions.gnome.org/extension/1251/blyr/
+#949 BottomPanel https://extensions.gnome.org/extension/949/bottompanel/
+#618 ClickSaver https://extensions.gnome.org/extension/618/clicksaver/
+#1726 Focusli https://extensions.gnome.org/extension/1726/focusli/
+#1496 Focused window indicator https://extensions.gnome.org/extension/1496/focused-window-indicator/
+
+#923 Ping Indicator https://extensions.gnome.org/extension/923/ping-indicator/
+#1155 IconPing for Gnome https://extensions.gnome.org/extension/1155/iconping-for-gnome/
+#1607 ping-monitor https://extensions.gnome.org/extension/1607/ping-monitor/
+#800 Remove Dropdown Arrows https://extensions.gnome.org/extension/800/remove-dropdown-arrows/
+#1506 Tandem Raise https://extensions.gnome.org/extension/1506/tandem-raise/
+#1473 Toggle Mute on Middle Click https://extensions.gnome.org/extension/1473/toggle-mute-on-middle-click/
+
+#ubuntu already resolve ?
+#1465 Desktop Icons https://extensions.gnome.org/extension/1465/desktop-icons/
