--- a/conf.conf
+++ b/conf.conf
@@ -15,9 +15,10 @@ googleChromeDownloadLastUrl="https://dl.google.com/linux/direct/google-chrome-st
 #923 Ping Indicator https://extensions.gnome.org/extension/923/ping-indicator/
 #1155 IconPing for Gnome https://extensions.gnome.org/extension/1155/iconping-for-gnome/
 #1607 ping-monitor https://extensions.gnome.org/extension/1607/ping-monitor/
-#800 Remove Dropdown Arrows https://extensions.gnome.org/extension/800/remove-dropdown-arrows/
 #1506 Tandem Raise https://extensions.gnome.org/extension/1506/tandem-raise/
 #1473 Toggle Mute on Middle Click https://extensions.gnome.org/extension/1473/toggle-mute-on-middle-click/
 
 #ubuntu already resolve ?
 #1465 Desktop Icons https://extensions.gnome.org/extension/1465/desktop-icons/
+#Unite already do
+#800 Remove Dropdown Arrows https://extensions.gnome.org/extension/800/remove-dropdown-arrows/
