--- a/conf.conf
+++ b/conf.conf
@@ -1,5 +1,5 @@
-gnomeExtensions_Id=(19 1287 792 36 615 770 906 750 826 307 2917 358)
-gnomeExtensions_Name=("User Themes" "Unite" "ShutdownTimer" "Lock Keys" "KStatusNotifierItem/AppIndicator Support" "Force Quit" "Sound Input & Output Device Chooser" "OpenWeather" "Suspend Button" "Dash to Dock" "Bring Out Submenu Of Power Off/Logout Button" "Activities Configurator")
+gnomeExtensions_Id=(19 1287 792 36 615 770 906 750 826 307 2917 358 517)
+gnomeExtensions_Name=("User Themes" "Unite" "ShutdownTimer" "Lock Keys" "KStatusNotifierItem/AppIndicator Support" "Force Quit" "Sound Input & Output Device Chooser" "OpenWeather" "Suspend Button" "Dash to Dock" "Bring Out Submenu Of Power Off/Logout Button" "Activities Configurator" "Caffeine")
 homeFilesDirectoriesVariables=(XDG_DESKTOP_DIR XDG_DOWNLOAD_DIR XDG_TEMPLATES_DIR XDG_PUBLICSHARE_DIR XDG_DOCUMENTS_DIR XDG_MUSIC_DIR XDG_PICTURES_DIR XDG_VIDEOS_DIR)
 teamViewerDownloadLastUrl="https://dl.teamviewer.com/download/linux/version_15x/teamviewer_15.0.8397_amd64.deb"
 googleChromeDownloadLastUrl="https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
