--- a/conf.conf
+++ b/conf.conf
@@ -3,6 +3,7 @@ gnomeExtensions_Name=("User Themes" "Unite" "ShutdownTimer" "Lock Keys" "KStatus
 homeFilesDirectoriesVariables=(XDG_DESKTOP_DIR XDG_DOWNLOAD_DIR XDG_TEMPLATES_DIR XDG_PUBLICSHARE_DIR XDG_DOCUMENTS_DIR XDG_MUSIC_DIR XDG_PICTURES_DIR XDG_VIDEOS_DIR)
 teamViewerDownloadLastUrl="https://dl.teamviewer.com/download/linux/version_15x/teamviewer_15.0.8397_amd64.deb"
 googleChromeDownloadLastUrl="https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
+whatsdeskDownloadLastUrl="https://thiagotognoli.gitlab.io/whatsdesk/whatsdesk_0.3.0_amd64.deb"
 
 #1324 App Switcher Actions https://extensions.gnome.org/extension/1324/app-switcher-actions/
 #1217 Appfolders Management extension https://extensions.gnome.org/extension/1217/appfolders-manager/
