--- a/conf.conf
+++ b/conf.conf
@@ -2,3 +2,4 @@ homeFilesDirectoriesVariables=(XDG_DESKTOP_DIR XDG_DOWNLOAD_DIR XDG_TEMPLATES_DI
 teamViewerDownloadLastUrl="https://dl.teamviewer.com/download/linux/version_15x/teamviewer_15.0.8397_amd64.deb"
 googleChromeDownloadLastUrl="https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
 whatsdeskDownloadLastUrl="https://thiagotognoli.gitlab.io/whatsdesk/whatsdesk_0.3.0_amd64.deb"
+skypeDownloadLastUrl="https://go.skype.com/skypeforlinux-64.rpm"
